--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html> 
-	<head>
-		<title> JavaScript Basics </title>
-		<meta charset="UTF-8">
-		<meta name="author"   content="Emerald Faith A. Mendez">
-		<meta name="keywords" content="Lab Exercise 1">
-		<meta name="revised"  content="01-22-2025">
-	</head>
-	<body>
-		<script src = "script.js"></script>
-	</body>
+     <head>
+	<title> JavaScript Basics </title>
+	     
+	<meta charset="UTF-8">
+	<meta name="author"   content="Emerald Faith A. Mendez">
+	<meta name="keywords" content="Lab Exercise 1">
+	<meta name="revised"  content="01-22-2025">
+    </head>
+    <body>
+	 <script src = "script.js">
+	 </script>
+    </body>
 </html>
