--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                    <title>JavaScript Basics </title>
 
                    <meta charset = "UTF-8">
-                   <meta name= "author" content="Sophia Abalos">
+                   <meta name= "author" content="Emerald Mendez">
                    <meta name = "keywords" content= "Lab Exercise 1">
                    <meta name= "date-submitted" content= "22-01-2025">
 
